gocd/gocd-server-deployment.yaml
# Source: gocd/templates/gocd-server-deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: gocd-server
  labels:
    app: gocd
    chart: "gocd-1.0.7"
    release: "gocd"
    heritage: "Helm"
    component: server
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: gocd
      release: "gocd"
      component: server
  template:
    metadata:
      labels:
        app: gocd
        release: "gocd"
        component: server
    spec:
      serviceAccountName: gocd
      volumes:
        - name: goserver-vol
          persistentVolumeClaim:
            claimName: gocd-server
        - name: config-vol
          configMap:
            name: gocd
      containers:
        - name: gocd-server
          image: "gocd/gocd-server:v18.3.0"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8153
            - containerPort: 8154
          livenessProbe:
            httpGet:
              path: /go/api/v1/health
              port: 8153
            initialDelaySeconds: 90
            periodSeconds: 15
            failureThreshold: 10
          readinessProbe:
            httpGet:
              path: /go/api/v1/health
              port: 8153
            initialDelaySeconds: 90
            periodSeconds: 15
            failureThreshold: 10
          volumeMounts:
            - name: goserver-vol
              mountPath: /godata
              subPath: godata
            - name: goserver-vol
              mountPath: /home/go
              subPath: homego
            - name: goserver-vol
              mountPath: /docker-entrypoint.d
              subPath: scripts
            - name: config-vol
              mountPath: /preconfigure_server.sh
              subPath: preconfigure_server.sh
          lifecycle:
            postStart:
              exec:
                command: ["/bin/bash","/preconfigure_server.sh"]
          resources:
            {}
---
