gocd/gocd-test.yaml
# Source: gocd/templates/tests/gocd-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "gocd-test-iiips"
  labels:
    app: gocd
    chart: "gocd-1.0.7"
    release: "gocd"
    heritage: "Helm"
  annotations:
    "helm.sh/hook": test-success
spec:
  containers:
    - name: gocd-ui-test
      image: "gocddev/gocd-helm-build:v0.1.0"
      command: ["/tools/bats/bats", "-t", "/tests/run.sh"]
      volumeMounts:
        - mountPath: /tests
          name: tests
          readOnly: true
        - mountPath: /tools
          name: tools
  volumes:
    - name: tests
      configMap:
        name: gocd-tests
    - name: tools
      emptyDir: {}
  restartPolicy: Never
