gocd/ingress.yaml
# Source: gocd/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gocd-server
  labels:
    app: gocd
    chart: "gocd-1.0.7"
    release: "gocd"
    heritage: "Helm"
    component: server
  annotations:
spec:
  backend:
    serviceName: gocd-server
    servicePort: 8153
  rules:
---
